--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -4,6 +4,7 @@
   "activeSession": "Active",
   "add": "Add",
   "addMember": "Add Member",
+  "alert": "Alert",
   "alreadyHaveAnAccount": "Already have an account?",
   "assets": "Assets",
   "athlete": "Athlete",
@@ -35,12 +36,16 @@
   "editClub": "Edit Club",
   "editProfile": "Edit Profile",
   "editProgram": "Edit Program",
+  "email": "Email",
+  "emailOrUsernameOrPhone": "Email / Username / Phone",
   "emailRequired": "Email is required",
+  "emailUsernamePhoneAlreadyRegistered": "Email / Username / Phone already registered",
   "endDate": "End Date",
   "endDateRequired": "End date is required",
   "english": "English",
   "enterClubDescription": "Enter club description",
   "enterClubName": "Enter club name",
+  "enterEmailOrUsernameOrPhone": "Enter email / username / phone",
   "enterEndDate": "Enter the end date",
   "enterProgramName": "Enter program name",
   "enterStartDate": "Enter the start date",
@@ -50,6 +55,7 @@
   "enterYourPass": "Enter your password",
   "enterYourPhoneNumber": "Enter your phone number",
   "enterYourUsername": "Enter your username",
+  "error": "Error",
   "errorCreateExercise": "Failed to create exercise",
   "establishedAt": "Established at :",
   "exam": "Exam",
@@ -70,7 +76,9 @@
   "handBall": "Handball",
   "hello": "Hello,",
   "history": "History",
+  "identifierRequired": "Identifier is required",
   "indonesian": "Indonesian",
+  "info": "Info",
   "invalidEmail": "Invalid email",
   "invalidPhoneNumber": "Invalid phone number",
   "invite": "Invite",
@@ -84,6 +92,7 @@
   "management": "Management",
   "members": "Members",
   "myClub": "My Club",
+  "myClubTraining": "My Club",
   "name": "Name",
   "nameRequired": "Name is required",
   "newProgram": "New Program",
@@ -91,6 +100,7 @@
   "noEvents": "No events",
   "noExpertise": "No expertise",
   "noMembersFound": "No members found",
+  "noSpaceAllowed": "Space no allowed",
   "noUsersFound": "No users found",
   "or": "or",
   "overview": "Overview",
@@ -115,6 +125,7 @@
   "startDate": "Start Date",
   "startDateRequired": "Start date is required",
   "succesEditProgram": "Successfully edit program",
+  "success": "Success",
   "successCreateClub": "Successfully created club",
   "successCreateExercise": "Successfully to create exercise",
   "successCreateProgram": "Successfully create program",
@@ -130,6 +141,8 @@
   "upload": "Upload",
   "user": "User",
   "username": "Username",
+  "usernameCantContainUppercase": "Username cannot contain capital letters",
+  "usernameNotAvailable": "Username is not available",
   "usernameRequired": "Username is required",
   "volleyBall": "Volleyball"
 }
