--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -4,6 +4,7 @@
   "activeSession": "Aktif",
   "add": "Tambah",
   "addMember": "Tambahkan Anggota",
+  "alert": "Peringatan",
   "alreadyHaveAnAccount": "Sudah punya akun?",
   "assets": "Asset",
   "athlete": "Atlet",
@@ -35,12 +36,16 @@
   "editClub": "Ubah Klub",
   "editProfile": "Ubah Profil",
   "editProgram": "Ubah Program",
+  "email": "Email",
+  "emailOrUsernameOrPhone": "Email / Nama pengguna / Telepon",
   "emailRequired": "Email wajib diisi",
+  "emailUsernamePhoneAlreadyRegistered": "Email / Nama pengguna / Telepon sudah terdaftar",
   "endDate": "Tanggal Berakhir",
   "endDateRequired": "Tanggal berakhir wajib diisi",
   "english": "Bahasa Inggris",
   "enterClubDescription": "Masukkan deskripsi klub",
   "enterClubName": "Masukkan nama klub",
+  "enterEmailOrUsernameOrPhone": "Masukan email / nama pengguna / telepon",
   "enterEndDate": "Masukkan tanggal berakhir",
   "enterProgramName": "Masukkan nama program",
   "enterStartDate": "Masukkan tanggal dimulai",
@@ -50,6 +55,7 @@
   "enterYourPass": "Masukkan kata sandi anda",
   "enterYourPhoneNumber": "Masukkan nomor telepon anda",
   "enterYourUsername": "Masukkan nama pengguna anda",
+  "error": "Gagal",
   "errorCreateExercise": "Gagal membuat latihan",
   "establishedAt": "Didirikan pada :",
   "exam": "Tes",
@@ -70,7 +76,9 @@
   "handBall": "Bola Tangan",
   "hello": "Halo,",
   "history": "Riwayat",
+  "identifierRequired": "Identitas wajib diisi",
   "indonesian": "Bahasa Indonesia",
+  "info": "Informasi",
   "invalidEmail": "Email tidak valid",
   "invalidPhoneNumber": "Nomor telepon tidak valid",
   "invite": "Undang",
@@ -84,6 +92,7 @@
   "management": "Manajemen",
   "members": "Anggota",
   "myClub": "Klub Saya",
+  "myClubTraining": "Klub Saya",
   "name": "Nama",
   "nameRequired": "Nama wajib diisi",
   "newProgram": "Program Baru",
@@ -91,6 +100,7 @@
   "noEvents": "Tidak ada kegiatan",
   "noExpertise": "Tidak memiliki keahlian",
   "noMembersFound": "Anggota tidak ditemukan",
+  "noSpaceAllowed": "Tidak diperbolehkan ada spasi",
   "noUsersFound": "Pengguna tidak ditemukan",
   "or": "atau",
   "overview": "Ringkasan",
@@ -115,6 +125,7 @@
   "startDate": "Tanggal Mulai",
   "startDateRequired": "Tanggal mulai wajib diisi",
   "succesEditProgram": "Berhasil mengubah program",
+  "success": "Berhasil",
   "successCreateClub": "Berhasil membuat club",
   "successCreateExercise": "Berhasil membuat latihan",
   "successCreateProgram": "Berhasil membuat program",
@@ -130,6 +141,8 @@
   "upload": "Unggah",
   "user": "Pengguna",
   "username": "Nama Penguna",
+  "usernameCantContainUppercase": "Nama pengguna tidak boleh mengandung huruf kapital",
+  "usernameNotAvailable": "Nama pengguna tidak tersedia",
   "usernameRequired": "Nama penguna wajib diisi",
   "volleyBall": "Voli"
 }
