feat: 🎸 implement update profile

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -4,6 +4,8 @@
   "activeSession": "Active",
   "add": "Add",
   "addMember": "Add Member",
+  "address": "Address",
+  "addressRequired": "Address is required",
   "alert": "Alert",
   "alreadyHaveAnAccount": "Already have an account?",
   "assets": "Assets",
@@ -11,6 +13,10 @@
   "athletes": "Athletes",
   "back": "Back",
   "basketBall": "Basketball",
+  "bornDate": "Born Date",
+  "bornDateRequired": "Born date is required",
+  "bornPlace": "Born Place",
+  "bornPlaceRequired": "Born place is required",
   "calendar": "Calendar",
   "cancel": "Cancel",
   "club": "Club",
@@ -49,11 +55,16 @@
   "enterEndDate": "Enter the end date",
   "enterProgramName": "Enter program name",
   "enterStartDate": "Enter the start date",
+  "enterYourAddress": "Enter your address",
+  "enterYourBornDate": "Enter your born date",
+  "enterYourBornPlace": "Enter your born place",
   "enterYourEmail": "Enter your email",
+  "enterYourExpertise": "Enter your expertise",
   "enterYourGender": "Enter your gender",
   "enterYourName": "Enter your name",
   "enterYourPass": "Enter your password",
   "enterYourPhoneNumber": "Enter your phone number",
+  "enterYourReligion": "Enter your religion",
   "enterYourUsername": "Enter your username",
   "error": "Error",
   "errorCreateExercise": "Failed to create exercise",
@@ -61,14 +72,20 @@
   "exam": "Exam",
   "exams": "Exams",
   "exercise": "Exercise",
+  "expertise": "Expertise",
+  "expertiseRequired": "Expertise is required",
   "expiredSession": "Expired",
   "failedCreateClub": "Failed to create club",
+  "failedCreateExercises": "Failed to create exercises",
   "failedCreateProgram": "Failed to create program",
   "failedEditProgram": "Failed to edit program",
   "failedLeaveClub": "Failed to leave club",
   "failedLogout": "Failed to logout",
   "failedSignIn": "Failed to sign in",
   "failedSignUp": "Failed to sign up",
+  "failedUpdateClub": "Failed to update club",
+  "failedUpdateExercises": "Failed to update exercises",
+  "failedUpdateProfile": "Failed to update profile",
   "futsal": "Futsal",
   "gender": "Gender",
   "genderRequired": "Gender is required",
@@ -114,6 +131,8 @@
   "programNameRequired": "Program name is required",
   "programs": "Programs",
   "question": "Question",
+  "religion": "Religion",
+  "religionRequired": "Religion is required",
   "search": "Search",
   "session": "Session",
   "settings": "Settings",
@@ -128,11 +147,14 @@
   "success": "Success",
   "successCreateClub": "Successfully created club",
   "successCreateExercise": "Successfully to create exercise",
+  "successCreateExercises": "Successfully create exercises",
   "successCreateProgram": "Successfully create program",
   "successLogout": "Successfully logged out",
   "successSignIn": "Successfully signed in ",
   "successSignUp": "Successfully signed up ",
+  "successUpdateClub": "Successfully update club",
   "successUpdateExercises": "Successfully update exercises",
+  "successUpdateProfile": "Successfully update profile",
   "system": "System",
   "tactical": "Tactical",
   "theme": "Theme",
