--- a/lib/core/l10n/intl_es.arb
+++ b/lib/core/l10n/intl_es.arb
@@ -4,6 +4,8 @@
   "activeSession": "Activo",
   "add": "Añadir",
   "addMember": "Añadir miembro",
+  "address": "Dirección",
+  "addressRequired": "La dirección es obligatoria",
   "alert": "Alerta",
   "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
   "assets": "Activos",
@@ -11,6 +13,10 @@
   "athletes": "Atletas",
   "back": "Atrás",
   "basketBall": "Baloncesto",
+  "bornDate": "Fecha de Nacimiento",
+  "bornDateRequired": "La fecha de nacimiento es obligatoria",
+  "bornPlace": "Lugar de Nacimiento",
+  "bornPlaceRequired": "El lugar de nacimiento es obligatorio",
   "calendar": "Calendario",
   "cancel": "Cancelar",
   "club": "Club",
@@ -49,11 +55,16 @@
   "enterEndDate": "Introduce la fecha de finalización",
   "enterProgramName": "Introduce el nombre del programa",
   "enterStartDate": "Introduce la fecha de inicio",
+  "enterYourAddress": "Ingrese su dirección",
+  "enterYourBornDate": "Ingrese su fecha de nacimiento",
+  "enterYourBornPlace": "Ingrese su lugar de nacimiento",
   "enterYourEmail": "Introduce tu correo electrónico",
+  "enterYourExpertise": "Ingrese su experiencia",
   "enterYourGender": "Introduce tu género",
   "enterYourName": "Introduce tu nombre",
   "enterYourPass": "Introduce tu contraseña",
   "enterYourPhoneNumber": "Introduce tu número de teléfono",
+  "enterYourReligion": "Ingrese su religión",
   "enterYourUsername": "Introduce tu nombre de usuario",
   "error": "Error",
   "errorCreateExercise": "Error al crear el ejercicio",
@@ -61,14 +72,20 @@
   "exam": "Examen",
   "exams": "Exámenes",
   "exercise": "Ejercicio",
+  "expertise": "Experiencia",
+  "expertiseRequired": "La experiencia es obligatoria",
   "expiredSession": "Expirado",
   "failedCreateClub": "Error al crear el club",
+  "failedCreateExercises": "Error al crear los ejercicios",
   "failedCreateProgram": "Error al crear el programa",
   "failedEditProgram": "Error al editar el programa",
   "failedLeaveClub": "Error al dejar el club",
   "failedLogout": "Error al cerrar sesión",
   "failedSignIn": "Error al iniciar sesión",
   "failedSignUp": "Error al registrarse",
+  "failedUpdateClub": "Error al actualizar el club",
+  "failedUpdateExercises": "Error al actualizar los ejercicios",
+  "failedUpdateProfile": "Error al actualizar el perfil",
   "futsal": "Fútbol sala",
   "gender": "Género",
   "genderRequired": "Se requiere el género",
@@ -114,6 +131,8 @@
   "programNameRequired": "Se requiere el nombre del programa",
   "programs": "Programas",
   "question": "Pregunta",
+  "religion": "Religión",
+  "religionRequired": "La religión es obligatoria",
   "search": "Buscar",
   "session": "Sesión",
   "settings": "Configuraciones",
@@ -128,11 +147,14 @@
   "success": "Éxito",
   "successCreateClub": "Club creado con éxito",
   "successCreateExercise": "Ejercicio creado con éxito",
+  "successCreateExercises": "Ejercicios creados con éxito",
   "successCreateProgram": "Programa creado con éxito",
   "successLogout": "Sesión cerrada con éxito",
   "successSignIn": "Inicio de sesión exitoso",
   "successSignUp": "Registro exitoso",
+  "successUpdateClub": "Club actualizado con éxito",
   "successUpdateExercises": "Ejercicios actualizados con éxito",
+  "successUpdateProfile": "Perfil actualizado con éxito",
   "system": "Sistema",
   "tactical": "Táctico",
   "theme": "Tema",
