--- a/lib/core/l10n/intl_hi.arb
+++ b/lib/core/l10n/intl_hi.arb
@@ -4,6 +4,8 @@
   "activeSession": "सक्रिय",
   "add": "जोड़ें",
   "addMember": "सदस्य जोड़ें",
+  "address": "पता",
+  "addressRequired": "पता आवश्यक है",
   "alert": "चेतावनी",
   "alreadyHaveAnAccount": "पहले से एक खाता है?",
   "assets": "संपत्तियाँ",
@@ -11,6 +13,10 @@
   "athletes": "खिलाड़ी",
   "back": "वापस",
   "basketBall": "बास्केटबॉल",
+  "bornDate": "जन्म तिथि",
+  "bornDateRequired": "जन्म तिथि आवश्यक है",
+  "bornPlace": "जन्म स्थान",
+  "bornPlaceRequired": "जन्म स्थान आवश्यक है",
   "calendar": "कैलेंडर",
   "cancel": "रद्द करें",
   "club": "क्लब",
@@ -49,11 +55,16 @@
   "enterEndDate": "समाप्ति तिथि दर्ज करें",
   "enterProgramName": "कार्यक्रम का नाम दर्ज करें",
   "enterStartDate": "प्रारंभ तिथि दर्ज करें",
+  "enterYourAddress": "अपना पता दर्ज करें",
+  "enterYourBornDate": "अपनी जन्म तिथि दर्ज करें",
+  "enterYourBornPlace": "अपना जन्म स्थान दर्ज करें",
   "enterYourEmail": "अपना ईमेल दर्ज करें",
+  "enterYourExpertise": "अपनी विशेषज्ञता दर्ज करें",
   "enterYourGender": "अपना लिंग दर्ज करें",
   "enterYourName": "अपना नाम दर्ज करें",
   "enterYourPass": "अपना पासवर्ड दर्ज करें",
   "enterYourPhoneNumber": "अपना फोन नंबर दर्ज करें",
+  "enterYourReligion": "अपना धर्म दर्ज करें",
   "enterYourUsername": "अपना उपयोगकर्ता नाम दर्ज करें",
   "error": "त्रुटि",
   "errorCreateExercise": "व्यायाम बनाने में विफल",
@@ -61,14 +72,20 @@
   "exam": "परीक्षा",
   "exams": "परीक्षाएँ",
   "exercise": "व्यायाम",
+  "expertise": "विशेषज्ञता",
+  "expertiseRequired": "विशेषज्ञता आवश्यक है",
   "expiredSession": "समाप्त",
   "failedCreateClub": "क्लब बनाने में विफल",
+  "failedCreateExercises": "अभ्यास बनाने में विफल",
   "failedCreateProgram": "कार्यक्रम बनाने में विफल",
   "failedEditProgram": "कार्यक्रम संपादित करने में विफल",
   "failedLeaveClub": "क्लब छोड़ने में विफल",
   "failedLogout": "लॉगआउट करने में विफल",
   "failedSignIn": "साइन इन करने में विफल",
   "failedSignUp": "साइन अप करने में विफल",
+  "failedUpdateClub": "क्लब अपडेट करने में विफल",
+  "failedUpdateExercises": "अभ्यास अपडेट करने में विफल",
+  "failedUpdateProfile": "प्रोफ़ाइल अपडेट करने में विफल",
   "futsal": "फुटसल",
   "gender": "लिंग",
   "genderRequired": "लिंग आवश्यक है",
@@ -114,6 +131,8 @@
   "programNameRequired": "कार्यक्रम का नाम आवश्यक है",
   "programs": "कार्यक्रम",
   "question": "प्रश्न",
+  "religion": "धर्म",
+  "religionRequired": "धर्म आवश्यक है",
   "search": "खोजें",
   "session": "सत्र",
   "settings": "सेटिंग्स",
@@ -128,11 +147,14 @@
   "success": "सफलता",
   "successCreateClub": "क्लब सफलतापूर्वक बनाया गया",
   "successCreateExercise": "व्यायाम सफलतापूर्वक बनाया गया",
+  "successCreateExercises": "अभ्यास सफलतापूर्वक बनाए गए",
   "successCreateProgram": "कार्यक्रम सफलतापूर्वक बनाया गया",
   "successLogout": "सफलतापूर्वक लॉगआउट",
   "successSignIn": "सफलतापूर्वक साइन इन किया गया",
   "successSignUp": "सफलतापूर्वक साइन अप किया गया",
+  "successUpdateClub": "क्लब सफलतापूर्वक अपडेट किया गया",
   "successUpdateExercises": "व्यायाम सफलतापूर्वक अपडेट किया गया",
+  "successUpdateProfile": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई",
   "system": "सिस्टम",
   "tactical": "रणनीतिक",
   "theme": "थीम",
