--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -4,6 +4,8 @@
   "activeSession": "Aktif",
   "add": "Tambah",
   "addMember": "Tambahkan Anggota",
+  "address": "Alamat",
+  "addressRequired": "Alamat diperlukan",
   "alert": "Peringatan",
   "alreadyHaveAnAccount": "Sudah punya akun?",
   "assets": "Asset",
@@ -11,6 +13,10 @@
   "athletes": "Atlet",
   "back": "Kembali",
   "basketBall": "Basket",
+  "bornDate": "Tanggal Lahir",
+  "bornDateRequired": "Tanggal lahir diperlukan",
+  "bornPlace": "Tempat Lahir",
+  "bornPlaceRequired": "Tempat lahir diperlukan",
   "calendar": "Kalender",
   "cancel": "Batal",
   "club": "Klub",
@@ -49,11 +55,16 @@
   "enterEndDate": "Masukkan tanggal berakhir",
   "enterProgramName": "Masukkan nama program",
   "enterStartDate": "Masukkan tanggal dimulai",
+  "enterYourAddress": "Masukkan alamat Anda",
+  "enterYourBornDate": "Masukkan tanggal lahir Anda",
+  "enterYourBornPlace": "Masukkan tempat lahir Anda",
   "enterYourEmail": "Masukkan email anda",
+  "enterYourExpertise": "Masukkan keahlian Anda",
   "enterYourGender": "Pilih jenis kelamin anda",
   "enterYourName": "Masukkan nama anda",
   "enterYourPass": "Masukkan kata sandi anda",
   "enterYourPhoneNumber": "Masukkan nomor telepon anda",
+  "enterYourReligion": "Masukkan agama Anda",
   "enterYourUsername": "Masukkan nama pengguna anda",
   "error": "Gagal",
   "errorCreateExercise": "Gagal membuat latihan",
@@ -61,14 +72,20 @@
   "exam": "Tes",
   "exams": "Tes",
   "exercise": "Latihan",
+  "expertise": "Keahlian",
+  "expertiseRequired": "Keahlian diperlukan",
   "expiredSession": "Kadaluarsa",
   "failedCreateClub": "Gagal membuat klub",
+  "failedCreateExercises": "Gagal membuat latihan",
   "failedCreateProgram": "Gagal membuat program",
   "failedEditProgram": "Gagal mengubah program",
   "failedLeaveClub": "Gagal meninggalkan klub",
   "failedLogout": "Gagal keluar",
   "failedSignIn": "Gagal masuk",
   "failedSignUp": "Gagal daftar",
+  "failedUpdateClub": "Gagal memperbarui klub",
+  "failedUpdateExercises": "Gagal memperbarui latihan",
+  "failedUpdateProfile": "Gagal memperbarui profil",
   "futsal": "Futsal",
   "gender": "Jenis Kelamin",
   "genderRequired": "Jenis kelamin wajib diisi",
@@ -114,6 +131,8 @@
   "programNameRequired": "Nama program wajib diisi",
   "programs": "Program",
   "question": "Pertanyaan",
+  "religion": "Agama",
+  "religionRequired": "Agama diperlukan",
   "search": "Cari",
   "session": "Sesi",
   "settings": "Pengaturan",
@@ -128,11 +147,14 @@
   "success": "Berhasil",
   "successCreateClub": "Berhasil membuat club",
   "successCreateExercise": "Berhasil membuat latihan",
+  "successCreateExercises": "Berhasil membuat latihan",
   "successCreateProgram": "Berhasil membuat program",
   "successLogout": "Berhasil keluar",
   "successSignIn": "Berhasil masuk ",
   "successSignUp": "Berhasil daftar",
+  "successUpdateClub": "Berhasil memperbarui klub",
   "successUpdateExercises": "Berhasil mengubah latihan",
+  "successUpdateProfile": "Berhasil memperbarui profil",
   "system": "Sistem",
   "tactical": "Taktis",
   "theme": "Tema",
