--- a/lib/core/l10n/intl_zh.arb
+++ b/lib/core/l10n/intl_zh.arb
@@ -4,6 +4,8 @@
   "activeSession": "活动中",
   "add": "添加",
   "addMember": "添加成员",
+  "address": "地址",
+  "addressRequired": "地址是必填项",
   "alert": "警报",
   "alreadyHaveAnAccount": "已有账号？",
   "assets": "资产",
@@ -11,6 +13,10 @@
   "athletes": "运动员",
   "back": "返回",
   "basketBall": "篮球",
+  "bornDate": "出生日期",
+  "bornDateRequired": "出生日期是必填项",
+  "bornPlace": "出生地点",
+  "bornPlaceRequired": "出生地点是必填项",
   "calendar": "日历",
   "cancel": "取消",
   "club": "俱乐部",
@@ -49,11 +55,16 @@
   "enterEndDate": "输入结束日期",
   "enterProgramName": "输入计划名称",
   "enterStartDate": "输入开始日期",
+  "enterYourAddress": "请输入您的地址",
+  "enterYourBornDate": "请输入您的出生日期",
+  "enterYourBornPlace": "请输入您的出生地点",
   "enterYourEmail": "输入您的邮箱",
+  "enterYourExpertise": "请输入您的专长",
   "enterYourGender": "输入您的性别",
   "enterYourName": "输入您的姓名",
   "enterYourPass": "输入您的密码",
   "enterYourPhoneNumber": "输入您的电话号码",
+  "enterYourReligion": "请输入您的宗教",
   "enterYourUsername": "输入您的用户名",
   "error": "错误",
   "errorCreateExercise": "创建练习失败",
@@ -61,14 +72,20 @@
   "exam": "考试",
   "exams": "考试",
   "exercise": "练习",
+  "expertise": "专长",
+  "expertiseRequired": "专长是必填项",
   "expiredSession": "已过期",
   "failedCreateClub": "创建俱乐部失败",
+  "failedCreateExercises": "创建练习失败",
   "failedCreateProgram": "创建计划失败",
   "failedEditProgram": "编辑计划失败",
   "failedLeaveClub": "离开俱乐部失败",
   "failedLogout": "注销失败",
   "failedSignIn": "登录失败",
   "failedSignUp": "注册失败",
+  "failedUpdateClub": "更新俱乐部失败",
+  "failedUpdateExercises": "更新练习失败",
+  "failedUpdateProfile": "更新个人资料失败",
   "futsal": "室内五人制足球",
   "gender": "性别",
   "genderRequired": "性别是必需的",
@@ -114,6 +131,8 @@
   "programNameRequired": "计划名称是必需的",
   "programs": "计划",
   "question": "问题",
+  "religion": "宗教",
+  "religionRequired": "宗教是必填项",
   "search": "搜索",
   "session": "会话",
   "settings": "设置",
@@ -128,11 +147,14 @@
   "success": "成功",
   "successCreateClub": "俱乐部创建成功",
   "successCreateExercise": "练习创建成功",
+  "successCreateExercises": "成功创建练习",
   "successCreateProgram": "计划创建成功",
   "successLogout": "注销成功",
   "successSignIn": "登录成功",
   "successSignUp": "注册成功",
+  "successUpdateClub": "成功更新俱乐部",
   "successUpdateExercises": "练习更新成功",
+  "successUpdateProfile": "成功更新个人资料",
   "system": "系统",
   "tactical": "战术",
   "theme": "主题",
