--- a/lib/core/l10n/intl_es.arb
+++ b/lib/core/l10n/intl_es.arb
@@ -166,5 +166,8 @@
   "usernameCantContainUppercase": "El nombre de usuario no puede contener letras mayúsculas",
   "usernameNotAvailable": "Nombre de usuario no disponible",
   "usernameRequired": "Se requiere nombre de usuario",
-  "volleyBall": "Voleibol"
+  "volleyBall": "Voleibol",
+  "warning": "Advertencia",
+  "leaveClub": "Dejar club",
+  "leaveClubConfirmation": "¿Estás seguro de que quieres dejar este club?"
 }
