feat: 🎸 create coachCreateExam UI

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -112,6 +112,7 @@
   "myClubTraining": "My Club",
   "name": "Name",
   "nameRequired": "Name is required",
+  "newExam": "New Exam",
   "newProgram": "New Program",
   "noClubsFound": "No clubs found",
   "noEvents": "No events",
