--- a/lib/core/l10n/intl_es.arb
+++ b/lib/core/l10n/intl_es.arb
@@ -112,6 +112,7 @@
   "myClubTraining": "Entrenamiento de mi club",
   "name": "Nombre",
   "nameRequired": "Se requiere el nombre",
+  "newExam": "Nuevo examen",
   "newProgram": "Nuevo programa",
   "noClubsFound": "No se encontraron clubes",
   "noEvents": "No hay eventos",
