--- a/lib/core/l10n/intl_hi.arb
+++ b/lib/core/l10n/intl_hi.arb
@@ -112,6 +112,7 @@
   "myClubTraining": "मेरे क्लब का प्रशिक्षण",
   "name": "नाम",
   "nameRequired": "नाम आवश्यक है",
+  "mewExam": "नई परीक्षा",
   "newProgram": "नया कार्यक्रम",
   "noClubsFound": "कोई क्लब नहीं मिला",
   "noEvents": "कोई घटनाएँ नहीं",
