--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -112,6 +112,7 @@
   "myClubTraining": "Klub Saya",
   "name": "Nama",
   "nameRequired": "Nama wajib diisi",
+  "newExam": "Tes Baru",
   "newProgram": "Program Baru",
   "noClubsFound": "Tidak ada klub yang ditemukan",
   "noEvents": "Tidak ada kegiatan",
