--- a/lib/core/l10n/intl_zh.arb
+++ b/lib/core/l10n/intl_zh.arb
@@ -112,6 +112,7 @@
   "myClubTraining": "我的俱乐部训练",
   "name": "姓名",
   "nameRequired": "姓名是必需的",
+  "newExam": "新考试",
   "newProgram": "新计划",
   "noClubsFound": "未找到俱乐部",
   "noEvents": "无事件",
