feat: 🎸 refine exam screen

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -32,27 +32,37 @@
   "coaches": "Coaches",
   "create": "Create",
   "createClub": "Create Club",
+  "createExam": "Create Exam",
   "createProgram": "Create Program",
   "dark": "Dark Mode",
   "delete": "Delete",
+  "description": "Description",
   "detail": "Detail",
   "dontHaveAnAccount": "Don\t have an account?",
   "download": "Download",
+  "dueAt": "Due at",
+  "dueAtRequired": "Due at is required",
   "edit": "Edit",
   "editClub": "Edit Club",
+  "editExam": "Edit Exam",
   "editProfile": "Edit Profile",
   "editProgram": "Edit Program",
   "email": "Email",
   "emailOrUsernameOrPhone": "Email / Username / Phone",
   "emailRequired": "Email is required",
   "emailUsernamePhoneAlreadyRegistered": "Email / Username / Phone already registered",
+  "emptyExam": "Exam is empty",
   "endDate": "End Date",
   "endDateRequired": "End date is required",
   "english": "English",
   "enterClubDescription": "Enter club description",
   "enterClubName": "Enter club name",
+  "enterDescription": "Enter description",
+  "enterDueAt": "Enter due at",
   "enterEmailOrUsernameOrPhone": "Enter email / username / phone",
   "enterEndDate": "Enter the end date",
+  "enterExamDescription": "Enter exam description",
+  "enterExamTitle": "Enter exam title",
   "enterProgramName": "Enter program name",
   "enterStartDate": "Enter the start date",
   "enterYourAddress": "Enter your address",
@@ -70,14 +80,18 @@
   "errorCreateExercise": "Failed to create exercise",
   "establishedAt": "Established at :",
   "exam": "Exam",
+  "examDescription": "Exam Description",
   "exams": "Exams",
+  "examTitleRequired": "Exam title is required",
   "exercise": "Exercise",
   "expertise": "Expertise",
   "expertiseRequired": "Expertise is required",
   "expiredSession": "Expired",
   "failedCreateClub": "Failed to create club",
+  "failedCreateExam": "Failed to create exam",
   "failedCreateExercises": "Failed to create exercises",
   "failedCreateProgram": "Failed to create program",
+  "failedEditExam": "Failed to edit exam",
   "failedEditProgram": "Failed to edit program",
   "failedLeaveClub": "Failed to leave club",
   "failedLogout": "Failed to logout",
@@ -103,6 +117,8 @@
   "kick": "Kick",
   "language": "Language",
   "leave": "Leave",
+  "leaveClub": "Leave Club",
+  "leaveClubConfirmation": "Are you sure you want to leave this club?",
   "leaveClubSuccess": "Successfully leave club",
   "light": "Light Mode",
   "logout": "Logout",
@@ -159,6 +175,7 @@
   "system": "System",
   "tactical": "Tactical",
   "theme": "Theme",
+  "title": "Title",
   "updateClub": "Update Club",
   "updateProfile": "Update Profile",
   "upload": "Upload",
@@ -168,7 +185,5 @@
   "usernameNotAvailable": "Username is not available",
   "usernameRequired": "Username is required",
   "volleyBall": "Volleyball",
-  "warning": "Warning",
-  "leaveClub": "Leave Club",
-  "leaveClubConfirmation": "Are you sure you want to leave this club?"
+  "warning": "Warning"
 }
