--- a/lib/core/l10n/intl_es.arb
+++ b/lib/core/l10n/intl_es.arb
@@ -32,27 +32,37 @@
   "coaches": "Entrenadores",
   "create": "Crear",
   "createClub": "Crear club",
+  "createExam": "Crear examen",
   "createProgram": "Crear programa",
   "dark": "Modo oscuro",
   "delete": "Eliminar",
+  "description": "Descripción",
   "detail": "Detalle",
   "dontHaveAnAccount": "¿No tienes una cuenta?",
   "download": "Descargar",
+  "dueAt": "Vencimiento en",
+  "dueAtRequired": "La fecha límite es obligatoria",
   "edit": "Editar",
   "editClub": "Editar Club",
+  "editExam": "Editar examen",
   "editProfile": "Editar perfil",
   "editProgram": "Editar programa",
   "email": "Correo Electrónico",
   "emailOrUsernameOrPhone": "Correo electrónico / Nombre de usuario / Teléfono",
   "emailRequired": "Se requiere correo electrónico",
   "emailUsernamePhoneAlreadyRegistered": "Correo electrónico / Nombre de usuario / Teléfono ya registrado",
+  "emptyExam": "El examen está vacío",
   "endDate": "Fecha de finalización",
   "endDateRequired": "Se requiere la fecha de finalización",
   "english": "Inglés",
   "enterClubDescription": "Introduce la descripción del club",
   "enterClubName": "Introduce el nombre del club",
+  "enterDescription": "Ingrese la descripción",
+  "enterDueAt": "Ingrese la fecha límite",
   "enterEmailOrUsernameOrPhone": "Introduce correo electrónico / nombre de usuario / teléfono",
   "enterEndDate": "Introduce la fecha de finalización",
+  "enterExamDescription": "Ingrese la descripción del examen",
+  "enterExamTitle": "Ingrese el título del examen",
   "enterProgramName": "Introduce el nombre del programa",
   "enterStartDate": "Introduce la fecha de inicio",
   "enterYourAddress": "Ingrese su dirección",
@@ -70,14 +80,18 @@
   "errorCreateExercise": "Error al crear el ejercicio",
   "establishedAt": "Establecido en:",
   "exam": "Examen",
+  "examDescription": "Descripción del examen",
   "exams": "Exámenes",
+  "examTitleRequired": "El título del examen es obligatorio",
   "exercise": "Ejercicio",
   "expertise": "Experiencia",
   "expertiseRequired": "La experiencia es obligatoria",
   "expiredSession": "Expirado",
   "failedCreateClub": "Error al crear el club",
+  "failedCreateExam": "Error al crear el examen",
   "failedCreateExercises": "Error al crear los ejercicios",
   "failedCreateProgram": "Error al crear el programa",
+  "failedEditExam": "Error al editar el examen",
   "failedEditProgram": "Error al editar el programa",
   "failedLeaveClub": "Error al dejar el club",
   "failedLogout": "Error al cerrar sesión",
@@ -103,6 +117,8 @@
   "kick": "Expulsar",
   "language": "Idioma",
   "leave": "Dejar",
+  "leaveClub": "Dejar club",
+  "leaveClubConfirmation": "¿Estás seguro de que quieres dejar este club?",
   "leaveClubSuccess": "Club dejado con éxito",
   "light": "Modo claro",
   "logout": "Cerrar sesión",
@@ -159,6 +175,7 @@
   "system": "Sistema",
   "tactical": "Táctico",
   "theme": "Tema",
+  "title": "Título",
   "updateClub": "Actualizar club",
   "updateProfile": "Actualizar Perfil",
   "upload": "Subir",
@@ -168,7 +185,5 @@
   "usernameNotAvailable": "Nombre de usuario no disponible",
   "usernameRequired": "Se requiere nombre de usuario",
   "volleyBall": "Voleibol",
-  "warning": "Advertencia",
-  "leaveClub": "Dejar club",
-  "leaveClubConfirmation": "¿Estás seguro de que quieres dejar este club?"
+  "warning": "Advertencia"
 }
