--- a/lib/core/l10n/intl_hi.arb
+++ b/lib/core/l10n/intl_hi.arb
@@ -32,27 +32,37 @@
   "coaches": "कोच",
   "create": "बनाएं",
   "createClub": "क्लब बनाएं",
+  "createExam": "परीक्षा बनाएँ",
   "createProgram": "कार्यक्रम बनाएं",
   "dark": "डार्क मोड",
   "delete": "हटाएं",
+  "description": "विवरण",
   "detail": "विवरण",
   "dontHaveAnAccount": "खाता नहीं है?",
   "download": "डाउनलोड करें",
+  "dueAt": "में निर्धारित",
+  "dueAtRequired": "समाप्ति तिथि आवश्यक है",
   "edit": "संपादित करें",
   "editClub": "क्लब संपादित करें",
+  "editExam": "परीक्षा संपादित करें",
   "editProfile": "प्रोफ़ाइल संपादित करें",
   "editProgram": "कार्यक्रम संपादित करें",
   "email": "ईमेल",
   "emailOrUsernameOrPhone": "ईमेल / उपयोगकर्ता नाम / फोन",
   "emailRequired": "ईमेल आवश्यक है",
   "emailUsernamePhoneAlreadyRegistered": "ईमेल / उपयोगकर्ता नाम / फोन पहले से पंजीकृत है",
+  "emptyExam": "परीक्षा खाली है",
   "endDate": "समाप्ति तिथि",
   "endDateRequired": "समाप्ति तिथि आवश्यक है",
   "english": "अंग्रेजी",
   "enterClubDescription": "क्लब विवरण दर्ज करें",
   "enterClubName": "क्लब का नाम दर्ज करें",
+  "enterDescription": "विवरण दर्ज करें",
+  "enterDueAt": "समाप्ति तिथि दर्ज करें",
   "enterEmailOrUsernameOrPhone": "ईमेल / उपयोगकर्ता नाम / फोन दर्ज करें",
   "enterEndDate": "समाप्ति तिथि दर्ज करें",
+  "enterExamDescription": "परीक्षा का विवरण दर्ज करें",
+  "enterExamTitle": "परीक्षा का शीर्षक दर्ज करें",
   "enterProgramName": "कार्यक्रम का नाम दर्ज करें",
   "enterStartDate": "प्रारंभ तिथि दर्ज करें",
   "enterYourAddress": "अपना पता दर्ज करें",
@@ -70,14 +80,18 @@
   "errorCreateExercise": "व्यायाम बनाने में विफल",
   "establishedAt": "स्थापित: ",
   "exam": "परीक्षा",
+  "examDescription": "परीक्षा का विवरण",
   "exams": "परीक्षाएँ",
+  "examTitleRequired": "परीक्षा का शीर्षक आवश्यक है",
   "exercise": "व्यायाम",
   "expertise": "विशेषज्ञता",
   "expertiseRequired": "विशेषज्ञता आवश्यक है",
   "expiredSession": "समाप्त",
   "failedCreateClub": "क्लब बनाने में विफल",
+  "failedCreateExam": "परीक्षा बनाने में विफल",
   "failedCreateExercises": "अभ्यास बनाने में विफल",
   "failedCreateProgram": "कार्यक्रम बनाने में विफल",
+  "failedEditExam": "परीक्षा संपादित करने में विफल",
   "failedEditProgram": "कार्यक्रम संपादित करने में विफल",
   "failedLeaveClub": "क्लब छोड़ने में विफल",
   "failedLogout": "लॉगआउट करने में विफल",
@@ -103,6 +117,8 @@
   "kick": "निकालें",
   "language": "भाषा",
   "leave": "छोड़ें",
+  "leaveClub": "क्लब छोड़ें",
+  "leaveClubConfirmation": "क्या आप वाकई इस क्लब को छोड़ना चाहते हैं?",
   "leaveClubSuccess": "क्लब सफलतापूर्वक छोड़ दिया",
   "light": "लाइट मोड",
   "logout": "लॉगआउट",
@@ -159,6 +175,7 @@
   "system": "सिस्टम",
   "tactical": "रणनीतिक",
   "theme": "थीम",
+  "title": "शीर्षक",
   "updateClub": "क्लब अपडेट करें",
   "updateProfile": "प्रोफ़ाइल अपडेट करें",
   "upload": "अपलोड करें",
@@ -168,7 +185,5 @@
   "usernameNotAvailable": "उपयोगकर्ता नाम उपलब्ध नहीं है",
   "usernameRequired": "उपयोगकर्ता नाम आवश्यक है",
   "volleyBall": "वॉलीबॉल",
-  "warning": "चेतावनी",
-  "leaveClub": "क्लब छोड़ें",
-  "leaveClubConfirmation": "क्या आप वाकई इस क्लब को छोड़ना चाहते हैं?"
+  "warning": "चेतावनी"
 }
