--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -32,27 +32,37 @@
   "coaches": "Pelatih",
   "create": "Buat",
   "createClub": "Buat Klub",
+  "createExam": "Buat Ujian",
   "createProgram": "Buat Program",
   "dark": "Mode Gelap",
   "delete": "Hapus",
+  "description": "Deskripsi",
   "detail": "Rincian",
   "dontHaveAnAccount": "Belum punya akun?",
   "download": "Unduh",
+  "dueAt": "Tenggat",
+  "dueAtRequired": "Tanggal jatuh tempo diperlukan",
   "edit": "Ubah",
   "editClub": "Ubah Klub",
+  "editExam": "Edit Ujian",
   "editProfile": "Ubah Profil",
   "editProgram": "Ubah Program",
   "email": "Email",
   "emailOrUsernameOrPhone": "Email / Nama pengguna / Telepon",
   "emailRequired": "Email wajib diisi",
   "emailUsernamePhoneAlreadyRegistered": "Email / Nama pengguna / Telepon sudah terdaftar",
+  "emptyExam": "Ujian kosong",
   "endDate": "Tanggal Berakhir",
   "endDateRequired": "Tanggal berakhir wajib diisi",
   "english": "Bahasa Inggris",
   "enterClubDescription": "Masukkan deskripsi klub",
   "enterClubName": "Masukkan nama klub",
+  "enterDescription": "Masukkan deskripsi",
+  "enterDueAt": "Masukkan tanggal jatuh tempo",
   "enterEmailOrUsernameOrPhone": "Masukan email / nama pengguna / telepon",
   "enterEndDate": "Masukkan tanggal berakhir",
+  "enterExamDescription": "Masukkan deskripsi ujian",
+  "enterExamTitle": "Masukkan judul ujian",
   "enterProgramName": "Masukkan nama program",
   "enterStartDate": "Masukkan tanggal dimulai",
   "enterYourAddress": "Masukkan alamat Anda",
@@ -70,14 +80,18 @@
   "errorCreateExercise": "Gagal membuat latihan",
   "establishedAt": "Didirikan pada :",
   "exam": "Tes",
+  "examDescription": "Deskripsi Ujian",
   "exams": "Tes",
+  "examTitleRequired": "Judul ujian diperlukan",
   "exercise": "Latihan",
   "expertise": "Keahlian",
   "expertiseRequired": "Keahlian diperlukan",
   "expiredSession": "Kadaluarsa",
   "failedCreateClub": "Gagal membuat klub",
+  "failedCreateExam": "Gagal membuat ujian",
   "failedCreateExercises": "Gagal membuat latihan",
   "failedCreateProgram": "Gagal membuat program",
+  "failedEditExam": "Gagal mengedit ujian",
   "failedEditProgram": "Gagal mengubah program",
   "failedLeaveClub": "Gagal meninggalkan klub",
   "failedLogout": "Gagal keluar",
@@ -103,6 +117,8 @@
   "kick": "Hapus",
   "language": "Bahasa",
   "leave": "Keluar",
+  "leaveClub": "Keluar dari klub",
+  "leaveClubConfirmation": "Apakah Anda yakin ingin meninggalkan klub ini?",
   "leaveClubSuccess": "Berhasil meninggalkan klub",
   "light": "Mode Terang",
   "logout": "Keluar",
@@ -159,6 +175,7 @@
   "system": "Sistem",
   "tactical": "Taktis",
   "theme": "Tema",
+  "title": "Judul",
   "updateClub": "Perbarui Club",
   "updateProfile": "Perbarui Profil",
   "upload": "Unggah",
@@ -168,7 +185,5 @@
   "usernameNotAvailable": "Nama pengguna tidak tersedia",
   "usernameRequired": "Nama penguna wajib diisi",
   "volleyBall": "Voli",
-  "warning": "Peringatan",
-  "leaveClub": "Keluar dari klub",
-  "leaveClubConfirmation": "Apakah Anda yakin ingin meninggalkan klub ini?"
+  "warning": "Peringatan"
 }
