--- a/lib/core/l10n/intl_zh.arb
+++ b/lib/core/l10n/intl_zh.arb
@@ -32,27 +32,37 @@
   "coaches": "教练",
   "create": "创建",
   "createClub": "创建俱乐部",
+  "createExam": "创建考试",
   "createProgram": "创建计划",
   "dark": "深色模式",
   "delete": "删除",
+  "description": "描述",
   "detail": "详情",
   "dontHaveAnAccount": "没有账号？",
   "download": "下载",
+  "dueAt": "到期",
+  "dueAtRequired": "截止时间是必填项",
   "edit": "编辑",
   "editClub": "编辑俱乐部",
+  "editExam": "编辑考试",
   "editProfile": "编辑资料",
   "editProgram": "编辑计划",
   "email": "电子邮件 ",
   "emailOrUsernameOrPhone": "邮箱 / 用户名 / 电话",
   "emailRequired": "邮箱是必需的",
   "emailUsernamePhoneAlreadyRegistered": "邮箱 / 用户名 / 电话已被注册",
+  "emptyExam": "考试为空",
   "endDate": "结束日期",
   "endDateRequired": "结束日期是必需的",
   "english": "英语",
   "enterClubDescription": "输入俱乐部描述",
   "enterClubName": "输入俱乐部名称",
+  "enterDescription": "输入描述",
+  "enterDueAt": "输入截止时间",
   "enterEmailOrUsernameOrPhone": "输入邮箱 / 用户名 / 电话",
   "enterEndDate": "输入结束日期",
+  "enterExamDescription": "输入考试描述",
+  "enterExamTitle": "输入考试标题",
   "enterProgramName": "输入计划名称",
   "enterStartDate": "输入开始日期",
   "enterYourAddress": "请输入您的地址",
@@ -70,14 +80,18 @@
   "errorCreateExercise": "创建练习失败",
   "establishedAt": "成立于：",
   "exam": "考试",
+  "examDescription": "考试描述",
   "exams": "考试",
+  "examTitleRequired": "考试标题是必填项",
   "exercise": "练习",
   "expertise": "专长",
   "expertiseRequired": "专长是必填项",
   "expiredSession": "已过期",
   "failedCreateClub": "创建俱乐部失败",
+  "failedCreateExam": "创建考试失败",
   "failedCreateExercises": "创建练习失败",
   "failedCreateProgram": "创建计划失败",
+  "failedEditExam": "编辑考试失败",
   "failedEditProgram": "编辑计划失败",
   "failedLeaveClub": "离开俱乐部失败",
   "failedLogout": "注销失败",
@@ -103,6 +117,8 @@
   "kick": "踢出",
   "language": "语言",
   "leave": "离开",
+  "leaveClub": "离开俱乐部",
+  "leaveClubConfirmation": "您确定要离开这个俱乐部吗？",
   "leaveClubSuccess": "成功离开俱乐部",
   "light": "浅色模式",
   "logout": "注销",
@@ -159,6 +175,7 @@
   "system": "系统",
   "tactical": "战术",
   "theme": "主题",
+  "title": "标题",
   "updateClub": "更新俱乐部",
   "updateProfile": "更新资料",
   "upload": "上传",
@@ -168,7 +185,5 @@
   "usernameNotAvailable": "用户名不可用",
   "usernameRequired": "用户名是必需的",
   "volleyBall": "排球",
-  "warning": "警告",
-  "leaveClub": "离开俱乐部",
-  "leaveClubConfirmation": "您确定要离开这个俱乐部吗？"
+  "warning": "警告"
 }
